--- a/node-express/package.json
+++ b/node-express/package.json
@@ -10,6 +10,8 @@
   "author": "Emmanuel soon",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "save": "^2.5.0"
   }
 }
