--- a/node-express/package.json
+++ b/node-express/package.json
@@ -10,6 +10,7 @@
   "author": "Emmanuel soon",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "save": "^2.5.0"
